--- a/Test/Test.Neon.Temporal.net/packages.config
+++ b/Test/Test.Neon.Temporal.net/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Humanizer.Core" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis" version="3.4.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="3.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.4.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.6" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.6" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.6" targetFramework="net48" />
