--- a/Test/Test.Neon.Cadence.net/app.config
+++ b/Test/Test.Neon.Cadence.net/app.config
@@ -62,6 +62,10 @@
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Humanizer" publicKeyToken="979442b78dfc278e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.8.0.0" newVersion="2.8.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
