--- a/Snippets/Temporal/Snippets.Temporal.HelloWorld/Snippets.Temporal.HelloWorld.csproj
+++ b/Snippets/Temporal/Snippets.Temporal.HelloWorld/Snippets.Temporal.HelloWorld.csproj
@@ -9,6 +9,22 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
   </ItemGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1998</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1998</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\Lib\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\..\..\Lib\Neon.Temporal\Neon.Temporal.csproj" />
