--- a/Charts/prometheus-operator/crds/crd-podmonitor.yaml
+++ b/Charts/prometheus-operator/crds/crd-podmonitor.yaml
@@ -1,92 +1,71 @@
-{{- if and .Values.prometheusOperator.enabled .Values.prometheusOperator.createCustomResource -}}
-# Source: https://raw.githubusercontent.com/coreos/kube-prometheus/master/manifests/0prometheus-operator-0servicemonitorCustomResourceDefinition.yaml
+# https://raw.githubusercontent.com/coreos/prometheus-operator/release-0.38/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
-  name: {{ printf "servicemonitors.%s" (.Values.prometheusOperator.crdApiGroup | default "monitoring.coreos.com") }}
-  labels:
-    app: {{ template "prometheus-operator.name" . }}-operator
-{{ include "prometheus-operator.labels" . | indent 4 }}
   annotations:
-{{- if .Values.prometheusOperator.cleanupCustomResourceBeforeInstall }}
-    "helm.sh/hook-delete-policy": "before-hook-creation"
-{{- end }}
-    "helm.sh/hook": crd-install
+    controller-gen.kubebuilder.io/version: v0.2.4
+    helm.sh/hook: crd-install
+  creationTimestamp: null
+  name: podmonitors.monitoring.coreos.com
 spec:
-  group: {{ .Values.prometheusOperator.crdApiGroup | default "monitoring.coreos.com" }}
+  group: monitoring.coreos.com
   names:
-    kind: ServiceMonitor
-    plural: servicemonitors
+    kind: PodMonitor
+    listKind: PodMonitorList
+    plural: podmonitors
+    singular: podmonitor
+  preserveUnknownFields: false
   scope: Namespaced
   validation:
     openAPIV3Schema:
+      description: PodMonitor defines monitoring for a set of pods.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
+        metadata:
+          type: object
         spec:
-          description: ServiceMonitorSpec contains specification parameters for a
-            ServiceMonitor.
+          description: Specification of desired Pod selection for target discovery
+            by Prometheus.
           properties:
-            endpoints:
-              description: A list of endpoints allowed as part of this ServiceMonitor.
-              items:
-                description: Endpoint defines a scrapeable endpoint serving Prometheus
-                  metrics.
-                properties:
-                  basicAuth:
-                    description: 'BasicAuth allow an endpoint to authenticate over
-                      basic authentication More info: https://prometheus.io/docs/operating/configuration/#endpoints'
-                    properties:
-                      password:
-                        description: SecretKeySelector selects a key of a Secret.
-                        properties:
-                          key:
-                            description: The key of the secret to select from.  Must
-                              be a valid secret key.
-                            type: string
-                          name:
-                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                            type: string
-                          optional:
-                            description: Specify whether the Secret or it's key must
-                              be defined
-                            type: boolean
-                        required:
-                        - key
-                        type: object
-                      username:
-                        description: SecretKeySelector selects a key of a Secret.
-                        properties:
-                          key:
-                            description: The key of the secret to select from.  Must
-                              be a valid secret key.
-                            type: string
-                          name:
-                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                            type: string
-                          optional:
-                            description: Specify whether the Secret or it's key must
-                              be defined
-                            type: boolean
-                        required:
-                        - key
-                        type: object
-                    type: object
-                  bearerTokenFile:
-                    description: File to read bearer token for scraping targets.
+            jobLabel:
+              description: The label to use to retrieve the job name from.
+              type: string
+            namespaceSelector:
+              description: Selector to select which namespaces the Endpoints objects
+                are discovered from.
+              properties:
+                any:
+                  description: Boolean describing whether all namespaces are selected
+                    in contrast to a list restricting them.
+                  type: boolean
+                matchNames:
+                  description: List of namespace names.
+                  items:
                     type: string
+                  type: array
+              type: object
+            podMetricsEndpoints:
+              description: A list of endpoints allowed as part of this PodMonitor.
+              items:
+                description: PodMetricsEndpoint defines a scrapeable endpoint of a
+                  Kubernetes Pod serving Prometheus metrics.
+                properties:
                   honorLabels:
                     description: HonorLabels chooses the metric's labels on collisions
                       with target labels.
+                    type: boolean
+                  honorTimestamps:
+                    description: HonorTimestamps controls whether Prometheus respects
+                      the timestamps present in scraped data.
                     type: boolean
                   interval:
                     description: Interval at which metrics should be scraped
@@ -110,7 +89,7 @@ spec:
                           type: integer
                         regex:
                           description: Regular expression against which the extracted
-                            value is matched. defailt is '(.*)'
+                            value is matched. Default is '(.*)'
                           type: string
                         replacement:
                           description: Replacement value against which a regex replace
@@ -137,14 +116,18 @@ spec:
                       type: object
                     type: array
                   params:
+                    additionalProperties:
+                      items:
+                        type: string
+                      type: array
                     description: Optional HTTP URL parameters
                     type: object
                   path:
                     description: HTTP path to scrape for metrics.
                     type: string
                   port:
-                    description: Name of the service port this endpoint refers to.
-                      Mutually exclusive with targetPort.
+                    description: Name of the pod port this endpoint refers to. Mutually
+                      exclusive with targetPort.
                     type: string
                   proxyUrl:
                     description: ProxyURL eg http://proxyserver:2195 Directs scrapes
@@ -170,7 +153,7 @@ spec:
                           type: integer
                         regex:
                           description: Regular expression against which the extracted
-                            value is matched. defailt is '(.*)'
+                            value is matched. Default is '(.*)'
                           type: string
                         replacement:
                           description: Replacement value against which a regex replace
@@ -204,46 +187,12 @@ spec:
                     type: string
                   targetPort:
                     anyOf:
-                    - type: string
                     - type: integer
-                  tlsConfig:
-                    description: TLSConfig specifies TLS configuration parameters.
-                    properties:
-                      caFile:
-                        description: The CA cert to use for the targets.
-                        type: string
-                      certFile:
-                        description: The client cert file for the targets.
-                        type: string
-                      insecureSkipVerify:
-                        description: Disable target certificate validation.
-                        type: boolean
-                      keyFile:
-                        description: The client key file for the targets.
-                        type: string
-                      serverName:
-                        description: Used to verify the hostname for the targets.
-                        type: string
-                    type: object
+                    - type: string
+                    description: 'Deprecated: Use ''port'' instead.'
+                    x-kubernetes-int-or-string: true
                 type: object
               type: array
-            jobLabel:
-              description: The label to use to retrieve the job name from.
-              type: string
-            namespaceSelector:
-              description: NamespaceSelector is a selector for selecting either all
-                namespaces or a list of namespaces.
-              properties:
-                any:
-                  description: Boolean describing whether all namespaces are selected
-                    in contrast to a list restricting them.
-                  type: boolean
-                matchNames:
-                  description: List of namespace names.
-                  items:
-                    type: string
-                  type: array
-              type: object
             podTargetLabels:
               description: PodTargetLabels transfers labels on the Kubernetes Pod
                 onto the target.
@@ -256,10 +205,7 @@ spec:
               format: int64
               type: integer
             selector:
-              description: A label selector is a label query over a set of resources.
-                The result of matchLabels and matchExpressions are ANDed. An empty
-                label selector matches all objects. A null label selector matches
-                no objects.
+              description: Selector to select Pod objects.
               properties:
                 matchExpressions:
                   description: matchExpressions is a list of label selector requirements.
@@ -292,6 +238,8 @@ spec:
                     type: object
                   type: array
                 matchLabels:
+                  additionalProperties:
+                    type: string
                   description: matchLabels is a map of {key,value} pairs. A single
                     {key,value} in the matchLabels map is equivalent to an element
                     of matchExpressions, whose key field is "key", the operator is
@@ -299,16 +247,15 @@ spec:
                     are ANDed.
                   type: object
               type: object
-            targetLabels:
-              description: TargetLabels transfers labels on the Kubernetes Service
-                onto the target.
-              items:
-                type: string
-              type: array
           required:
-          - endpoints
+          - podMetricsEndpoints
           - selector
           type: object
+      required:
+      - spec
       type: object
   version: v1
-{{- end }}
+  versions:
+  - name: v1
+    served: true
+    storage: true
