--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -330,6 +330,9 @@
     <Compile Include="..\Test.Neon.Common\Helper\Test_NeonHelper.Json.cs">
       <Link>Helper\Test_NeonHelper.Json.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Common\Helper\Test_NeonHelper.Misc.cs">
+      <Link>Helper\Test_NeonHelper.Misc.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Common\Helper\Test_NeonHelper.Process.cs">
       <Link>Helper\Test_NeonHelper.Process.cs</Link>
     </Compile>
