#942: Implement IntegerEnumConverter (for JSON.NET)

--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -363,6 +363,9 @@
     <Compile Include="..\Test.Neon.Common\Misc\Test_ByteUnits.cs">
       <Link>Misc\Test_ByteUnits.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Common\Misc\Test_IntegerEnumConverter.cs">
+      <Link>Misc\Test_IntegerEnumConverter.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Common\Net\Test_JsonClient.cs">
       <Link>Net\Test_JsonClient.cs</Link>
     </Compile>
