--- a/Lib/Neon.Kube.Azure/Neon.Kube.Azure.csproj
+++ b/Lib/Neon.Kube.Azure/Neon.Kube.Azure.csproj
@@ -20,6 +20,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>kubernetes</PackageTags>
+    <RootNamespace>Neon.Kube</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
