Convert [Neon.Web] to a library.
This was a Console app for historical reasons dating back ASP.NET 5 previews.

--- a/Test/Test.Neon.Web/Test.Neon.Web.csproj
+++ b/Test/Test.Neon.Web/Test.Neon.Web.csproj
@@ -7,6 +7,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>Test.Neon.Web</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
