--- a/Charts/grafana/values.yaml
+++ b/Charts/grafana/values.yaml
@@ -321,7 +321,7 @@ datasources:
     datasources:
     - name: Prometheus
       type: prometheus
-      url: http://m3coordinator-m3db-prometheus.monitoring:7201
+      url: http://neon-metrics-cortex:9009/api/prom
       access: proxy
       isDefault: true
       jsonData:
