--- a/Charts/fluent-bit/values.yaml
+++ b/Charts/fluent-bit/values.yaml
@@ -125,7 +125,9 @@ parsers:
 env: []
 
 ## Annotations to add to the DaemonSet's Pods
-podAnnotations: {}
+podAnnotations:
+  traffic.sidecar.istio.io/excludeInboundPorts: '2020'
+  traffic.sidecar.istio.io/excludeOutboundPorts: '2020'
 
 ## By default there different 'files' provides in the config
 ## (fluent-bit.conf, custom_parsers.conf). This defeats
