--- a/Images/neon-log-collector/conf/filter.conf
+++ b/Images/neon-log-collector/conf/filter.conf
@@ -63,3 +63,16 @@
       </record>
       whitelist_keys ""
 </filter>
+
+# count the number of incoming records per tag
+<filter **>
+  @type prometheus
+  <metric>
+    name fluentd_input_status_num_records_total
+    type counter
+    desc The total number of incoming records
+    <labels>
+      tag ${tag}
+    </labels>
+  </metric>
+</filter>
