--- a/Images/neon-log-host/conf/fluent-bit-service.conf
+++ b/Images/neon-log-host/conf/fluent-bit-service.conf
@@ -1,4 +1,7 @@
 [SERVICE]
+    HTTP_Server  On
+    HTTP_Listen  0.0.0.0
+    HTTP_PORT    2020
     Flush        1
     Daemon       Off
     Log_Level    ${LOG_LEVEL}
