Cortex now works with the official image and neon Yugabyte. We will switch back to the official Yugabyte release pending this pull request: https://github.com/yugabyte/yugabyte-db/pull/5493

--- a/Charts/cortex/values.yaml
+++ b/Charts/cortex/values.yaml
@@ -3,8 +3,8 @@
 # and development.
 
 image:
-  repository: nkubedev/cortex
-  tag: latest
+  repository: quay.io/cortexproject/cortex
+  tag: v1.3.0
   pullPolicy: IfNotPresent
 
 serviceAccount:
