Drop Envoy access logs in the monitoring namespace for now.

--- a/Images/neon-log-host/conf/fluent-bit-filter.conf
+++ b/Images/neon-log-host/conf/fluent-bit-filter.conf
@@ -12,6 +12,12 @@
     Name    lua
     Match   kube.*
     script  /fluent-bit/etc/functions.lua
+    call    filter
+
+[FILTER]
+    Name    lua
+    Match   kube.*
+    script  /fluent-bit/etc/functions.lua
     call    dedot
 
 [FILTER]
