we don't want ingester right now

--- a/Charts/jaeger/values.yaml
+++ b/Charts/jaeger/values.yaml
@@ -139,7 +139,7 @@ schema:
 elasticsearch: {}
 
 ingester:
-  enabled: true
+  enabled: false
   podSecurityContext: {}
   securityContext: {}
   annotations: {}
