--- a/Charts/elasticsearch/templates/statefulset.yaml
+++ b/Charts/elasticsearch/templates/statefulset.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ template "uname" . }}
+  name: {{ .Chart.Name }}
   labels:
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
