--- a/Charts/kibana/templates/deployment.yaml
+++ b/Charts/kibana/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Chart.Name }}
   labels:
     app: {{ .Chart.Name }}
     release: {{ .Release.Name | quote }}
