--- a/Charts/kibana/Chart.yaml
+++ b/Charts/kibana/Chart.yaml
@@ -3,7 +3,7 @@ home: https://github.com/elastic/helm-charts
 maintainers:
 - email: helm-charts@elastic.co
   name: Elastic
-name: kibana
+name: neon-logs-kibana
 version: 7.2.0
 appVersion: 7.2.0
 sources:
